Initial commit or your commit message

--- a/BookShoppingCartMvcUI/appsettings.json
+++ b/BookShoppingCartMvcUI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=RAVINDRA\\MSSQLSERVER01;Database=BookShoppingCartMvc;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Data Source=LAPTOP-VAJTQ9KT\\SQLEXPRESS;Initial Catalog=projet;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
   },
   "Logging": {
     "LogLevel": {
